# autotester

./: .gitignore  .pylintrc  Cargo.toml  Makefile  README.md  TODO.md  pyproject.toml  rec.cast  test.cast  test2.cast
.env/: pyvenv.cfg
.github/workflows/: CI.yml
apps/: autotest.py  bpif3_armbian.py  bpif3_bianbu.py  generic_linux.py
apps/boards/: boards.py  bpif3.py  generic.py
apps/system/: archlinux_rootfs.py  armbian.py  generic.py  system.py
apps/testlib/: support_matrix_parser.py  template_parser.py
apps/utils/: maintain_img.py  urlmarker.py  utils.py
doc/: design.md  python_api.md
python/tester/: __init__.py  direct_script.py  hook.py  tty_abst.py
python/tester/src/: hook.py
src/: consts.rs  lib.rs  logger.rs  main.rs  util.rs
src/cli/: asciicast.rs  asciicast_multi.rs  deansi.rs  mod.rs  recorder.rs  serial.rs  shell.rs  ssh.rs  tee.rs  tty.rs
src/devhost/: devhost.rs  sdwirec.rs
src/device/: device.rs
src/exec/: cli_api.rs  cli_exec.rs  cli_exec_sudo.rs  gui_api.rs  gui_exec.rs  mod.rs  needle.rs  runner.rs
src/exec/gui_handler/: basic_handle.rs  handler_api.rs  mod.rs
src/gui/: mod.rs  monitor.rs  screen.rs
src/pythonapi/: asciicast.rs  deansi.rs  exec.rs  hook.rs  mod.rs  pyasciicast.rs  pyexec.rs  pyhook.rs  pylogger.rs  pysdwirec.rs  pyserial.rs  pyshell.rs  pytee.rs  sdwirec.rs  serial.rs  shell.rs  shell_like.rs  tee.rs  util.rs
src/term/: asciicast.rs  deansi.rs  mod.rs  recorder.rs  serial.rs  shell.rs  ssh.rs  tee.rs  tty.rs
src/ui/: cli_hooker.rs  code_editor.rs  ipc.rs  main.rs  mod.rs  pyenv.rs  terminal.rs  test_window.rs  ui_cli_exec.rs  util.rs
src/util/: anybase.rs  logger.rs  singleton.rs  util.rs
tests/: gen_record.rs  test_hooktty.py  test_shell.py  two_shell.rs  ui_test.rs
