[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tester"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
asciicast = "0.2.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
serialport = "4.5.0"
ssh2 = "0.9.4"
subprocess = "0.2.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"

[toolchain]
channel = "nightly"