[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tester"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
asciicast = "0.2.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
serialport = "4.5.0"
ssh2 = "0.9.4"
toml = "0.8.19"
colored = "2.1.0"
nix = { version = "0.29.0", features = ["fs", "process", "signal", "term"] }
ptyprocess = "0.4.1"
vte = "0.13.0"
image = "0.25.2"
xcap = "0.0.13"
enigo = "0.2.1"

[toolchain]
channel = "nightly"
